# Wagner-Algorithms

./: .gitignore  LICENSE  README.md  draw-apr-impl.py  draw-trade-off.py  draw.py  in-place-sorting.md  trade-off-draw.py
advanced-cip/: 20251121_out4.txt  CMakeLists.txt  README.md  benchmark_std.txt  out20251101.txt  run.sh  uss_mem_monitor.sh
advanced-cip/equihash/: equix41
advanced-cip/include/: layer.h  merge.h  sort.h  util.h  zcash_blake.h
advanced-cip/src/: apr_alg.cpp  apr_main.cpp
c-poc/: zcash_poc.c
c_poc/: zcash_poc.c
cip-poc/: CMakeLists.txt  README.md  run.sh
cip-poc/include/: eq_core.h  zcash_blake.h
cip-poc/src/: eq_alg.cpp  eq_main.cpp
eq1445/: CMakeLists.txt  README.md  run.sh  run_apr_curve.sh  run_merge.sh
eq1445/include/core/: equihash_base.h  merge.h  sort.h  util.h  zcash_blake.h
eq1445/include/eq144_5/: equihash_144_5.h  merge_144_5.h  sort_144_5.h  util_144_5.h
eq1445/include/eq200_9/: equihash_200_9.h  merge_200_9.h  sort_200_9.h  util_200_9.h
eq1445/logs/: 20251121_out1.txt  benchmark_kx.txt  eq1445_apr_trade_off.txt  eq1445_benchmark.txt  eq2009_apr_trade_off.txt
eq1445/src/: inplace_merge_benchmark.cpp
eq1445/src/benchmarks/: inplace_merge_benchmark.cpp
eq1445/src/eq144_5/: apr_alg.cpp  apr_main.cpp
eq1445/src/eq200_9/: apr_alg.cpp  apr_main.cpp
eq1445/test/: check_size.cpp  test_iv.cpp  test_iv_optimization.cpp  test_ivkey_to_iv.cpp  test_layer_iv.cpp  test_move_array.cpp  test_setivkey_perf.cpp  verify_size.cpp
eq2009/: README.md  run.sh
eq2009/include/: advanced_pr.h  merge.h
eq2009/src/: apr_main.cpp
inplace-merge/: README.md  fast_inplace_merge.cpp  inplace-merge-benchmark.sh
pics/: apr-time-mem.pgf  draw-apr-impl.py  draw-trade-off.py  trade-off.pgf
python-poc/: README.md  all_in_one_estimators.py  hybrid-para.txt  inplace-radix-sort.py  k_list_algorithm.py  k_tree_algorithm.py  merge_in_place.py  second_run_of_index_trimming.py  single_chain_algorithm.py  single_list_algorithm.py  wagner_algorithmic_estimator.py
